# GeoBoulder-Dimensions

./: README.md  dock.word  main.py  pyproject.toml
data/output/: output.dbf
src/: data_processor.py  data_reader.py  result_calculator.py
tests/: test_calculate_boulder_centroids.py  test_calculate_boulder_dimensions.py  test_data_reader.py  test_result_calculator.py
