[tool.poetry]
name = "src"
version = "0.1.0"
description = "GeoBoulder-Dimensions"
authors = ["OlyaEf <efimovskikh@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.1"
rasterio = "^1.3.9"
shapely = "^2.0.2"
fiona = "^1.9.5"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
